@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*websocket-driver-0.3.3 (25 Apr 2014)
+
+  25 Apr 2014; Hans de Graaff <graaff@gentoo.org>
+  +websocket-driver-0.3.3.ebuild:
+  Version bump.
+
 *websocket-driver-0.3.2 (10 Jan 2014)
 
   10 Jan 2014; Hans de Graaff <graaff@gentoo.org>
